--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </nav>
     <div class="container">
         <section class="about">
-            <img src="photo.heic" alt="Ezhil Aadhithyan K.">
+            <img src="photo.png" alt="Ezhil Aadhithyan K.">
             <h2>About Me</h2>
             <p>
                 I am a 3rd year undergraduate student at KPR Institute of Engineering and Technology, pursuing a BTech in Artificial Intelligence and Data Science. I have completed the German A1 exam and have done some ML projects. I have leadership skills from my tenure as the Chair of Community Service at the Rotaract Club of KPRIET. I interned in Full Stack Development with Django at Pinesphere Solutions and was elected as the Treasurer of IEEE Computational Society of IEEE KPRIET Student Branch. I've also completed several certification in NPTEL.
